--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-12 19:44+0100\n"
-"PO-Revision-Date: 2016-02-12 18:45+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-02-13 09:25+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -169,10 +169,10 @@ msgid "ACL"
 msgstr "ACL"
 
 msgid "APT - History"
-msgstr ""
+msgstr "APT – historie"
 
 msgid "APT - Terminal output"
-msgstr ""
+msgstr "APT – výstup z terminálu"
 
 msgid "ASCII"
 msgstr "ASCII"
@@ -461,7 +461,7 @@ msgid "Azerbaijan"
 msgstr "Ázerbájdžán"
 
 msgid "Bad"
-msgstr ""
+msgstr "Špatné"
 
 msgid "Bahamas"
 msgstr "Bahamy"
@@ -1427,7 +1427,7 @@ msgid "Gibraltar"
 msgstr "Gibraltar"
 
 msgid "Good"
-msgstr ""
+msgstr "Dobré"
 
 msgid "Greece"
 msgstr "Řecko"
@@ -1490,7 +1490,7 @@ msgid "Haiti"
 msgstr "Haiti"
 
 msgid "Hardware address"
-msgstr ""
+msgstr "Hardwarová adresa"
 
 msgid "Heard Island and McDonald Islands"
 msgstr "Heardův ostrov a McDonaldovy ostrovy"
@@ -2801,7 +2801,7 @@ msgid "SSH"
 msgstr "SSH"
 
 msgid "SSH certificate"
-msgstr ""
+msgstr "SSH certifikát"
 
 msgid "SSID"
 msgstr "SSID"
@@ -2933,7 +2933,7 @@ msgid "Select a volume ..."
 msgstr "Vyberte svazek ..."
 
 msgid "Select an authentication mode ..."
-msgstr ""
+msgstr "Vyberte režim ověřování…"
 
 msgid "Select devices to be added to the RAID device"
 msgstr "Vyberte zařízení, které má být přidáno do RAID pole"
@@ -3326,7 +3326,7 @@ msgid "The RSA public key in OpenSSH format."
 msgstr "Veřejná část RSA klíče ve formátu, jaký používá OpenSSH."
 
 msgid "The SSH certificate used for authentication."
-msgstr ""
+msgstr "SSH certifikát použitý pro ověřování."
 
 msgid "The SSL certificate."
 msgstr "SSL certifikát."
@@ -3824,7 +3824,7 @@ msgid "United States Minor Outlying Islands"
 msgstr "Menší odlehlé ostrovy Spojených států amerických"
 
 msgid "Unknown"
-msgstr ""
+msgstr "Neznámé"
 
 msgid "Unknown log file type (id=%s)"
 msgstr "Neznámý typ souboru protokolu (id=%s)"
@@ -4102,10 +4102,10 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "old-age"
-msgstr ""
+msgstr "v minulosti"
 
 msgid "prefail"
-msgstr ""
+msgstr "blížící se selhání"
 
 msgid "seconds"
 msgstr "sekundy"
