--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-12 19:44+0100\n"
-"PO-Revision-Date: 2016-02-12 18:45+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-02-13 02:39+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -169,10 +169,10 @@ msgid "ACL"
 msgstr "ACL"
 
 msgid "APT - History"
-msgstr ""
+msgstr "APT - 历史"
 
 msgid "APT - Terminal output"
-msgstr ""
+msgstr "APT - 终端输出"
 
 msgid "ASCII"
 msgstr "ASCII"
@@ -1490,7 +1490,7 @@ msgid "Haiti"
 msgstr "海地"
 
 msgid "Hardware address"
-msgstr ""
+msgstr "硬件地址"
 
 msgid "Heard Island and McDonald Islands"
 msgstr "赫德岛和麦克唐纳群岛"
@@ -2801,7 +2801,7 @@ msgid "SSH"
 msgstr "SSH"
 
 msgid "SSH certificate"
-msgstr ""
+msgstr "SSH证书"
 
 msgid "SSID"
 msgstr " SSID"
@@ -2933,7 +2933,7 @@ msgid "Select a volume ..."
 msgstr "选择卷 ..."
 
 msgid "Select an authentication mode ..."
-msgstr ""
+msgstr "选择授权模式 ..."
 
 msgid "Select devices to be added to the RAID device"
 msgstr "选择被添加到RAID的设备"
@@ -3326,7 +3326,7 @@ msgid "The RSA public key in OpenSSH format."
 msgstr "OpenSSH格式的RSA公钥。"
 
 msgid "The SSH certificate used for authentication."
-msgstr ""
+msgstr "该SSH证书用于授权。"
 
 msgid "The SSL certificate."
 msgstr "SSL证书。"
