--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-12 19:44+0100\n"
-"PO-Revision-Date: 2016-02-12 18:45+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-02-13 03:16+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -169,10 +169,10 @@ msgid "ACL"
 msgstr "ACL"
 
 msgid "APT - History"
-msgstr ""
+msgstr "APT - 歷史"
 
 msgid "APT - Terminal output"
-msgstr ""
+msgstr "APT - 終端機輸出"
 
 msgid "ASCII"
 msgstr "ASCII"
@@ -1490,7 +1490,7 @@ msgid "Haiti"
 msgstr "海地"
 
 msgid "Hardware address"
-msgstr ""
+msgstr "硬體地址"
 
 msgid "Heard Island and McDonald Islands"
 msgstr "赫德島與麥當勞群島"
@@ -2801,7 +2801,7 @@ msgid "SSH"
 msgstr "SSH"
 
 msgid "SSH certificate"
-msgstr ""
+msgstr "SSH 憑證"
 
 msgid "SSID"
 msgstr "SSID"
@@ -2933,7 +2933,7 @@ msgid "Select a volume ..."
 msgstr "選擇一個磁碟 ..."
 
 msgid "Select an authentication mode ..."
-msgstr ""
+msgstr "選擇一個鑑別模式"
 
 msgid "Select devices to be added to the RAID device"
 msgstr "選擇將被添加到 RAID 的裝置"
@@ -3326,7 +3326,7 @@ msgid "The RSA public key in OpenSSH format."
 msgstr "RSA 公鑰用的是 OpenSSH 格式。"
 
 msgid "The SSH certificate used for authentication."
-msgstr ""
+msgstr "用來鑑別的 SSH 憑證"
 
 msgid "The SSL certificate."
 msgstr "SSL 證書。"
@@ -4102,10 +4102,10 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "old-age"
-msgstr ""
+msgstr "老齡"
 
 msgid "prefail"
-msgstr ""
+msgstr "預期失效"
 
 msgid "seconds"
 msgstr "秒"
