--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.11) stable; urgency=low
+
+  * Mantis 0001464: Unable to create rsync rule.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 15 Feb 2016 17:37:51 +0100
+
 openmediavault (3.0.10) stable; urgency=low
 
   * Update locales.
