--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (2.1.29) stable; urgency=low
 
   * Fix bug in the package postinst script.
+  * Output more detailed S.M.A.R.T. error description via tooltip in
+    the device overview.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 13 Feb 2016 19:41:24 +0100
 
