--- a/deb/openmediavault-iscsitarget/debian/changelog
+++ b/deb/openmediavault-iscsitarget/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-iscsitarget (2.3) stable; urgency=low
+
+  * Fix bug when submitting a modifying target configuration.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 17 Feb 2016 13:04:43 +0100
+
 openmediavault-iscsitarget (2.2) stable; urgency=low
 
   * Adapt changes in the core UI framework.
