--- a/deb/openmediavault-iscsitarget/debian/changelog
+++ b/deb/openmediavault-iscsitarget/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-iscsitarget (3.0.2) stable; urgency=low
+
+  * Fix bug when submitting a modifying target configuration.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 17 Feb 2016 13:08:25 +0100
+
 openmediavault-iscsitarget (3.0.1) stable; urgency=low
 
   * Various improvements.
@@ -9,6 +15,12 @@ openmediavault-iscsitarget (3.0) stable; urgency=low
   * Adapt to Debian 8 (Jessie).
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 21 Dec 2015 19:42:45 +0100
+
+openmediavault-iscsitarget (2.3) stable; urgency=low
+
+  * Fix bug when submitting a modifying target configuration.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 17 Feb 2016 13:04:43 +0100
 
 openmediavault-iscsitarget (2.2) stable; urgency=low
 
