--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (3.0.11) stable; urgency=low
 
   * Output more detailed S.M.A.R.T. error description via tooltip in
     the device overview.
+  * Mantis 0001424: Improve BTRFS file system backend.
   * Mantis 0001464: Unable to create rsync rule.
   * Mantis 0001466: New rsync via ssh. Add SSH port.
 
