--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.11) stable; urgency=low
 
+  * Update locales.
   * Various improvements.
   * Output more detailed S.M.A.R.T. error description via tooltip in
     the device overview.
