--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-12 19:44+0100\n"
-"PO-Revision-Date: 2016-02-13 03:16+0000\n"
-"Last-Translator: kochin <kochinc@outlook.com>\n"
+"POT-Creation-Date: 2016-02-18 21:22+0100\n"
+"PO-Revision-Date: 2016-02-18 20:22+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -460,9 +460,6 @@ msgstr "可用"
 msgid "Azerbaijan"
 msgstr "阿塞拜疆"
 
-msgid "Bad"
-msgstr "損壞"
-
 msgid "Bahamas"
 msgstr "巴哈馬"
 
@@ -870,14 +867,29 @@ msgstr "裝置"
 msgid "Device Mapper %s [%s, %s]"
 msgstr "裝置對應器 %s [%s, %s]"
 
+msgid "Device has a few bad sectors"
+msgstr "裝置有少許壞扇區"
+
+msgid "Device has many bad sectors"
+msgstr "裝置有多個壞扇區"
+
 msgid "Device information"
 msgstr "裝置資訊"
+
+msgid "Device is being used outside design parameters"
+msgstr "裝置目前被使用於設計參數範圍之外"
 
 msgid "Device model"
 msgstr "裝置型號"
 
 msgid "Device properties"
 msgstr "裝置屬性"
+
+msgid "Device was used outside of design parameters in the past"
+msgstr "裝置以前曾被使用於設計參數範圍之外"
+
+msgid "Device(s)"
+msgstr ""
 
 msgid "Device/Label"
 msgstr "裝置/標籤"
@@ -2803,6 +2815,9 @@ msgstr "SSH"
 msgid "SSH certificate"
 msgstr "SSH 憑證"
 
+msgid "SSH port"
+msgstr "SSH 通訊埠"
+
 msgid "SSID"
 msgstr "SSID"
 
@@ -4105,7 +4120,7 @@ msgid "old-age"
 msgstr "老齡"
 
 msgid "prefail"
-msgstr "預期失效"
+msgstr "故障前兆"
 
 msgid "seconds"
 msgstr "秒"
