--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.12) stable; urgency=low
+
+  * Mantis 0001424: Improve BTRFS file system backend.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 19 Feb 2016 11:07:29 +0100
+
 openmediavault (3.0.11) stable; urgency=low
 
   * Update locales.
