--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-18 21:22+0100\n"
-"PO-Revision-Date: 2016-02-18 20:22+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-02-21 09:34+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -868,16 +868,16 @@ msgid "Device Mapper %s [%s, %s]"
 msgstr "Mapovač zařízení %s [%s, %s]"
 
 msgid "Device has a few bad sectors"
-msgstr ""
+msgstr "Na záznamovém médiu jednotky se vyskytuje několik vadných sektorů"
 
 msgid "Device has many bad sectors"
-msgstr ""
+msgstr "Na záznamovém médiu jednotky se vyskytuje velké množství vadných sektorů"
 
 msgid "Device information"
 msgstr "Informace o zařízení"
 
 msgid "Device is being used outside design parameters"
-msgstr ""
+msgstr "Jednotka je provozována za horších podmínek, než na které je zkonstruována"
 
 msgid "Device model"
 msgstr "Typ zařízení"
@@ -886,10 +886,10 @@ msgid "Device properties"
 msgstr "Vlastnosti zařízení"
 
 msgid "Device was used outside of design parameters in the past"
-msgstr ""
+msgstr "Jednotka byla v minulosti provozována za horších podmínek, než na které je zkonstruována"
 
 msgid "Device(s)"
-msgstr ""
+msgstr "Zařízení"
 
 msgid "Device/Label"
 msgstr "Zařízení/Popiska"
@@ -2816,7 +2816,7 @@ msgid "SSH certificate"
 msgstr "SSH certifikát"
 
 msgid "SSH port"
-msgstr ""
+msgstr "Port pro SSH"
 
 msgid "SSID"
 msgstr "SSID"
