--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-18 21:22+0100\n"
-"PO-Revision-Date: 2016-02-18 20:22+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-02-21 08:58+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -171,10 +171,10 @@ msgid "ACL"
 msgstr "ACL"
 
 msgid "APT - History"
-msgstr ""
+msgstr "APT - Historia"
 
 msgid "APT - Terminal output"
-msgstr ""
+msgstr "APT - Terminal"
 
 msgid "ASCII"
 msgstr "ASCII"
@@ -870,16 +870,16 @@ msgid "Device Mapper %s [%s, %s]"
 msgstr "Dispositivo de mapeo %s [%s, %s]"
 
 msgid "Device has a few bad sectors"
-msgstr ""
+msgstr "El disco tiene algunos sectores defectuosos"
 
 msgid "Device has many bad sectors"
-msgstr ""
+msgstr "El disco tiene muchos sectores defectuosos"
 
 msgid "Device information"
 msgstr "Información del dispositivo"
 
 msgid "Device is being used outside design parameters"
-msgstr ""
+msgstr "El disco ha sobrepasado los parametros de diseño"
 
 msgid "Device model"
 msgstr "Modelo del dispositivo"
@@ -888,10 +888,10 @@ msgid "Device properties"
 msgstr "Propiedades del dispositivo"
 
 msgid "Device was used outside of design parameters in the past"
-msgstr ""
+msgstr "El disco ha sobrepasado los parametros de diseño en el pasado"
 
 msgid "Device(s)"
-msgstr ""
+msgstr "Disco(s)"
 
 msgid "Device/Label"
 msgstr "Dispositivo/Etiqueta"
@@ -1504,7 +1504,7 @@ msgid "Haiti"
 msgstr "Haití"
 
 msgid "Hardware address"
-msgstr ""
+msgstr "Dirección Hardware"
 
 msgid "Heard Island and McDonald Islands"
 msgstr "Islas Heard y McDonald (Australia)"
@@ -2815,10 +2815,10 @@ msgid "SSH"
 msgstr "SSH"
 
 msgid "SSH certificate"
-msgstr ""
+msgstr "Certificado SSH"
 
 msgid "SSH port"
-msgstr ""
+msgstr "Puerto SSH"
 
 msgid "SSID"
 msgstr "SSID"
@@ -2950,7 +2950,7 @@ msgid "Select a volume ..."
 msgstr "Seleccionar un volumen ..."
 
 msgid "Select an authentication mode ..."
-msgstr ""
+msgstr "Seleccionar un modo de autentificación ..."
 
 msgid "Select devices to be added to the RAID device"
 msgstr "Seleccionar dispositivos a añadir al RAID"
@@ -3343,7 +3343,7 @@ msgid "The RSA public key in OpenSSH format."
 msgstr "La clave pública RSA en formato OpenSSH."
 
 msgid "The SSH certificate used for authentication."
-msgstr ""
+msgstr "El certificado SSH usado para autentificación."
 
 msgid "The SSL certificate."
 msgstr "El certificado SSL."
@@ -4119,10 +4119,10 @@ msgid "n/a"
 msgstr "n/d"
 
 msgid "old-age"
-msgstr ""
+msgstr "Edad"
 
 msgid "prefail"
-msgstr ""
+msgstr "Pre-fallo"
 
 msgid "seconds"
 msgstr "segundos"
