--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Feb 2016 10:40:04 +0100
+
 openmediavault (2.1.29) stable; urgency=low
 
   * Fix bug in the package postinst script.
