--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,7 @@ openmediavault (3.0.12) stable; urgency=low
   * Add ability to configure HTTP/HTTPS/FTP proxy servers.
   * Mantis 0001424: Improve BTRFS file system backend.
   * Mantis 0001469: 20authorized_keys mkconf file typo.
+  * Mantis 0001471: Updating smartmontools db fails due to address redirection.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 19 Feb 2016 11:07:29 +0100
 
@@ -112,7 +113,7 @@ openmediavault (3.0) stable; urgency=low
 
 openmediavault (2.2) stable; urgency=low
 
-  * Various improvements.
+  * Mantis 0001471: Updating smartmontools db fails due to address redirection.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Feb 2016 10:40:04 +0100
 
