--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (3.1) stable; urgency=low
+
+  * Use global HTTP proxy if configured.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Feb 2016 17:08:49 +0100
+
 openmediavault-clamav (3.0.2) stable; urgency=low
 
   * Adapt logrotate configuration to systemd.
