--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (3.0.13) stable; urgency=low
 
   * Various improvements.
+  * Mantis 0001473: Improve S.M.A.R.T. health assessment.
+  * Mantis 0001474: Cannot create a file system on a loop device.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 23 Feb 2016 12:01:34 +0100
 
@@ -117,6 +119,12 @@ openmediavault (3.0) stable; urgency=low
   * Adapt package to Debian 8 (Jessie).
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Nov 2015 15:53:40 +0100
+
+openmediavault (2.2.1) stable; urgency=low
+
+  * Mantis 0001474: Cannot create a file system on a loop device.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 24 Feb 2016 11:56:20 +0100
 
 openmediavault (2.2) stable; urgency=low
 
